<resources>
    <string name="app_name">To Do List</string>
    <string name="my_day">My Day</string>
    <string name="important">Important</string>
    <string name="planned">Planned</string>
    <string name="add_list">Add List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tasks">Tasks</string>
</resources>
